<resources>
    <string name="app_name">AddSection</string>

    <!-- 登录注册 -->
    <string name="login">登录</string>
    <string name="login_failed">登录失败</string>
    <string name="regist_xiniuyun">注册云账号</string>
    <string name="forgetPwd">忘记密码</string>
    <string name="input_account">请输入云账号/手机号</string>
    <string name="input_psd">请输入密码</string>
    <string name="register">注册</string>
    <string name="findpsd">找回密码</string>
    <string name="input_phone">请输入你的手机号码</string>
    <string name="input_correct_phone">请输入正确手机号码</string>
    <string name="next">下一步</string>
    <string name="phone_verification">手机验证</string>
    <string name="send_verification">6位数字验证码已发送到</string>
    <string name="input_verification">请输入验证码</string>
    <string name="resend">重新发送</string>
    <string name="setpsd">设置密码</string>
    <string name="register_success">注册成功</string>
    <string name="change_psd_success">修改密码成功</string>
    <string name="tologin">马上去登录</string>
    <string name="xiniuyid">ID</string>

    <!-- 主界面 main -->
    <string name="mail">邮件</string>
    <string name="contacts">通讯录</string>
    <string name="mine">我</string>
    <string name="again_according_exit_program">再按一次退出程序</string>

    <!-- mail -->
    <string name="folder">文件夹</string>
    <string name="inbox">收件箱</string>
    <string name="deleted">已删除邮件</string>
    <string name="spam">垃圾邮件</string>
    <string name="draft">草稿箱</string>
    <string name="outbox">发件箱</string>
    <string name="mail_out">已发送邮件</string>
    <string name="edit">编辑</string>
    <string name="select_all">全选</string>
    <string name="cancle_select_all">取消全选</string>
    <string name="already_select">已经选择0封</string>
    <string name="unread_dot">• 未读</string>
    <string name="attch_dot">• 含附件</string>
    <string name="space">&#160;&#160; </string>
    <string name="dot">&#160;• </string>
    <string name="write_mail">写邮件</string>
    <string name="mail_box">邮箱</string>
    <string name="new_todo">新建待办</string>
    <string name="scan">扫一扫</string>
    <string name="all">全部</string>
    <string name="unread">未读</string>
    <string name="attch">含附件</string>
    <string name="cancle">取消</string>
    <string name="is_save_draft">是否保存草稿</string>
    <string name="is_save_draft_revision">是否保存草稿的修改</string>
    <string name="save_draft">保存草稿</string>
    <string name="save_revision">保存修改</string>
    <string name="delete_draft">删除草稿</string>
    <string name="abandon_revision">放弃修改</string>
    <string name="search">搜索</string>
    <string name="clear_history">清空历史记录</string>
    <string name="receiver">收件人:</string>
    <string name="copy_to">抄&#160;&#160;&#160;&#160;送:</string>
    <string name="blind_carbon_copy">密&#160;&#160;&#160;&#160;送:</string>
    <string name="copy_to_blind_carbon_copy">抄送/密送:</string>
    <string name="subject">主题</string>
    <string name="nosubject">无主题</string>
    <string name="send">发送</string>
    <string name="photo_album">相册</string>
    <string name="take_photo">拍摄</string>
    <string name="file">文件</string>
    <string name="attach">附件</string>
    <string name="back_previous_level">返回上一级</string>
    <string name="sdcard0">sdcard0</string>
    <string name="addressor">发件人</string>
    <string name="all_inbox">所有收件箱</string>
    <string name="all_unread">所有未读</string>
    <string name="reply">回复</string>
    <string name="reply1">回复:</string>
    <string name="replyall">回复全部</string>
    <string name="forward">转发</string>
    <string name="forward1">转发:</string>
    <string name="particular">详情</string>
    <string name="see_more">查看更多</string>
    <string name="receiver2">收件人</string>
    <string name="no_receiver">无收件人</string>
    <string name="fill_in_receiver">请填写收件人</string>
    <string name="copy_to2">抄送&#160;&#160;</string>
    <string name="to">发至&#160;&#160;</string>
    <string name="blind_carbon_copy2">密送</string>
    <string name="close">关闭</string>
    <string name="all_marks_read">全标已读</string>
    <string name="multiple_choice">多选</string>
    <string name="more">更多</string>
    <string name="delete">删除</string>
    <string name="mark_read">标为已读</string>
    <string name="mark_unread">标为未读</string>
    <string name="move_delete">移动至垃圾邮件</string>
    <string name="move_inbox">移动至收件箱</string>
    <string name="comma">、</string>
    <string name="complete">完成</string>
    <string name="please_email_me_later">正在发送邮件</string>
    <string name="inspect_permission">请检查是否开启sdcard读写权限</string>

    <!-- 通讯录 -->
    <string name="send_mail">发邮件</string>
    <string name="contact_history">来往邮件</string>
    <string name="name">姓名</string>
    <string name="company">公司</string>
    <string name="department">部门</string>
    <string name="post">职位</string>
    <string name="phone">电话</string>
    <string name="address">地址</string>
    <string name="remark">备注</string>
    <string name="delete_contact">删除联系人</string>
    <string name="save">保存</string>
    <string name="mine_send">我发送的</string>
    <string name="mine_receive">我收到的</string>
    <string name="name_cannot_null">姓名不可以为空</string>
    <string name="incorrect_email_format">邮箱格式不对</string>
    <string name="determine_delete_contacts">确定要删除该联系人吗？</string>
    <string name="create_contacts">新建联系人</string>
    <string name="mobile_contacts">手机通讯录</string>

    <!-- 我 -->
    <string name="cash_extra">现金余额</string>
    <string name="deduct_extra">扣费余额</string>
    <string name="install_app">已安装的应用</string>
    <string name="uninstall_app">未安装的应用</string>
    <string name="personal_data">个人资料</string>
    <string name="head_portrait">头像</string>
    <string name="xiniuyun_account">云帐号</string>
    <string name="gender">性别</string>
    <string name="region">地区</string>
    <string name="subordinate_companies">所属公司</string>
    <string name="security_center">安全中心</string>
    <string name="password_setting">密码设置</string>
    <string name="log_out">退出登录</string>
    <string name="xiniu_wallet">钱包</string>
    <string name="transaction_record">交易记录</string>
    <string name="popularize_advertising_fee">推广计划扣费</string>
    <string name="netwin_chariot">网赢战车</string>
    <string name="succeed">成功</string>
    <string name="failed">失败</string>
    <string name="service_renew">服务续费</string>
    <string name="enterprise_cloud_website">企业云网站</string>
    <string name="recharge">充值</string>
    <string name="withdraw">提现</string>
    <string name="xiniuyun">云</string>

    <!-- 设置 -->
    <string name="setting">设置</string>
    <string name="mail_account">邮箱帐号</string>
    <string name="delete_mail_account">删除账号将清除缓存在手机的账\n号数据，确定删除吗？</string>
    <string name="mail_sign">邮件签名</string>
    <string name="newmail_remind">新邮件提醒</string>
    <string name="password_protection">密码保护</string>
    <string name="clear_cache">清除缓存</string>
    <string name="about">关于</string>
    <string name="add_mail_account">添加邮箱帐号</string>
    <string name="qq_163_mail">163/QQ/企业邮箱等</string>
    <string name="server_settings">服务器设置</string>
    <string name="deleted_email_settings">已删除邮件设置</string>
    <string name="addresser_name">发件人名称</string>
    <string name="delete_account">删除账号</string>
    <string name="input_addresser_name">请输入发件人名称</string>
    <string name="pop3_server">pop3</string>
    <string name="imap_server">imap</string>
    <string name="smtp_server">smtp服务器</string>
    <string name="smtp">smtp</string>
    <string name="serve_type">服务器类型</string>
    <string name="server">服务器</string>
    <string name="server_null">服务器不可为空</string>
    <string name="account">账号</string>
    <string name="account_null">账号不可为空</string>
    <string name="account_noemai">账号格式不对</string>
    <string name="password">密码</string>
    <string name="password_null">密码不可为空</string>
    <string name="port">端口</string>
    <string name="port_null">端口不可为空</string>
    <string name="ssl">SSL</string>
    <string name="verificationing">验证中</string>
    <string name="verification_succeed">验证成功</string>
    <string name="verification_failed">验证失败，请检查网络及服务器信息</string>
    <string name="auto_delete_email">自动删除邮件</string>
    <string name="delete_from_server">从服务器上删除</string>
    <string name="never">永不</string>
    <string name="after_1_day">1天后</string>
    <string name="after_7_day">7天后</string>
    <string name="after_30_day">30天后</string>
    <string name="custom_signature">自定义签名</string>
    <string name="from_xiniu_mail">发自邮箱助手</string>
    <string name="allowed_remind">允许提醒</string>
    <string name="notification_details_display">通知详情显示</string>
    <string name="notification_reminder">关闭后收到新邮件时将\n不显示发件人和主题</string>
    <string name="sound">声音</string>
    <string name="vibrates">振动</string>
    <string name="warning_tone">提示音</string>
    <string name="following_system">跟随系统</string>
    <string name="nocturnal">夜间免打扰</string>
    <string name="nocturnal_reminder">开启后，22:00-8:00间收到新邮\n件将不发出提示音，不进行震动</string>
    <string name="change_gesture_password">修改手势密码</string>
    <string name="delete_gesture_password">删除手密码</string>
    <string name="countting">正在计算</string>
    <string name="no_memory_to_clean">没有需要清\n理的缓存</string>
    <string name="memory_clean_reminder">缓存数据包括邮件中的附件和图片等。\n清理后再次查看需要重新下载</string>
    <string name="retain_seven_days">存留最近七天的附件缓存</string>
    <string name="clean_reminder">清理缓存</string>
    <string name="copyright">英迈思版权所有©1997-2017</string>
    <string name="confirm">确定</string>
    <string name="account_exists">该账号已存在</string>
    <string name="enter_email">进入邮箱</string>
    <string name="email_format_incorrect">邮箱地址格式不对</string>
</resources>
