<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_title"
    android:layout_width="match_parent"
    android:layout_height="@dimen/title_height"
    android:background="@color/backgroundtitle"
    android:paddingRight="@dimen/padding_normal"

    >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:text="@string/app_name"
        android:textColor="@color/text_tv_normal"
        android:textSize="@dimen/text_size_normal" />

    <TextView
        android:id="@+id/tv_title_left"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/cancle"
        android:textColor="@color/text_tv_normal"
        android:textSize="@dimen/text_size_normal"
        android:visibility="gone" />


    <ImageView
        android:id="@+id/imgv_title_left"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:scaleType="center"
        android:src="@mipmap/title_bar_back" />


    <TextView
        android:id="@+id/tv_title_right"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/edit"
        android:textColor="@color/text_tv_normal"
        android:textSize="@dimen/text_size_normal"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/imgv_title_right"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:scaleType="center"
        android:src="@mipmap/title_bar_mail"
        android:visibility="invisible" />

</RelativeLayout>