<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/title" />

            <LinearLayout style="@style/ll_write_mail">

                <TextView
                    style="@style/tv_write_mail"
                    android:text="@string/receiver" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.huj.addsection.mail.view.FlowLayout
                        android:id="@+id/flowl_to"
                        style="@style/flowlayout_write_mail">

                        <EditText
                            android:id="@+id/et_to_write_mail"
                            style="@style/et_write_mail" />

                    </com.huj.addsection.mail.view.FlowLayout>

                    <ImageView
                        android:id="@+id/add_to_write_mail"
                        style="@style/add_write_mail"
                        />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout style="@style/ll_write_mail">

                <TextView
                    android:id="@+id/tv_cc_write_mail"
                    style="@style/tv_write_mail"
                    android:text="@string/copy_to_blind_carbon_copy" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.huj.addsection.mail.view.FlowLayout
                        android:id="@+id/flowl_cc"
                        style="@style/flowlayout_write_mail">


                        <EditText
                            android:id="@+id/et_cc_write_mail"
                            style="@style/et_write_mail" />
                    </com.huj.addsection.mail.view.FlowLayout>

                    <ImageView
                        android:id="@+id/add_cc_write_mail"
                        style="@style/add_write_mail" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_bcc_write_mail"
                style="@style/ll_write_mail"
                android:visibility="gone">

                <TextView
                    style="@style/tv_write_mail"
                    android:text="@string/blind_carbon_copy" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.huj.addsection.mail.view.FlowLayout
                        android:id="@+id/flowl_bcc"
                        style="@style/flowlayout_write_mail">


                        <EditText
                            android:id="@+id/et_bcc_write_mail"
                            style="@style/et_write_mail" />
                    </com.huj.addsection.mail.view.FlowLayout>

                    <ImageView
                        android:id="@+id/add_bcc_write_mail"
                        style="@style/add_write_mail" />

                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:layout_marginLeft="@dimen/margin_normal">

                <EditText
                    android:id="@+id/et_subject"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/margin_normal"
                    android:layout_toLeftOf="@+id/ll_add_subject"
                    android:background="@color/background"
                    android:ellipsize="end"
                    android:hint="@string/subject"
                    android:paddingLeft="@dimen/padding_normal"
                    android:singleLine="true"
                    android:textColor="@color/text_tv_normal"
                    android:textSize="@dimen/text_size_normal" />

                <LinearLayout
                    android:id="@+id/ll_add_subject"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:paddingRight="@dimen/padding_normal">

                    <ImageView
                        android:id="@+id/add_subject"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:scaleType="center"
                        android:src="@mipmap/mail_compose_add_attachment_btn"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/tv_subject_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="3"
                        android:textColor="@color/text_tv_blue"
                        android:textSize="@dimen/text_size_small"
                        android:visibility="gone"
                        />
                </LinearLayout>


                <include layout="@layout/line_horizontal_bottom" />
            </RelativeLayout>

            <EditText
                android:id="@+id/et_mail_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal"
                android:background="@color/background"
                android:gravity="top"
                android:padding="@dimen/padding_normal"
                android:text="\n\n\n\n发自犀牛邮箱助手"
                android:textColor="@color/text_tv_normal"
                android:textSize="@dimen/text_size_normal" />


            <com.huj.addsection.mail.view.RichEditor
                android:id="@+id/editor_write_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:background="@drawable/boder_top" />

            <com.huj.addsection.mail.view.MyGridView
                android:id="@+id/gv_item_bcc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_max1"
                android:horizontalSpacing="10dp"
                android:listSelector="@null"
                android:numColumns="2"
                android:paddingLeft="@dimen/padding_normal"
                android:paddingRight="@dimen/padding_normal"
                android:scrollbars="none"
                android:verticalSpacing="10dp" />
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/insert_img"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:background="@drawable/boder_radius"
        android:scaleType="center"
        android:src="@mipmap/insert_img"
        android:visibility="gone" />

</RelativeLayout>